# async_api

./: .env.example  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/api/v1/: films.py
src/core/: config.py
src/db/: elastic.py  redis.py
src/services/: film.py
